[WebGPU] Fix flaky crashing tests https://bugs.webkit.org/show_bug.cgi?id=268628 <radar://122189307>

Reviewed by Tadeu Zagallo.

The member variable, m_device, was being accessed off a single
thread, in scheduleWork(), so it should be ThreadSafeWeakPtr
instead of WeakPtr.

* Source/WebGPU/WebGPU/Queue.h:
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::commitMTLCommandBuffer):
(WebGPU::Queue::submit):
(WebGPU::Queue::writeBuffer):
(WebGPU::Queue::device const):
(WebGPU::Queue::clearTexture):
(WebGPU::Queue::writeTexture):
(WebGPU::Queue::scheduleWork):

* Source/WebGPU/WebGPU/PipelineLayout.h:
* Source/WebGPU/WebGPU/PipelineLayout.mm:
(WebGPU::PipelineLayout::errorValidatingBindGroupCompatibility const):
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::executePreDrawCommands):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executePreDrawCommands):
* Source/WebGPU/WebGPU/RenderPipeline.h:
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::RenderPipeline::vertexStageInBufferCount const):
Fix improper validation logic introduced with
https://bugs.webkit.org/show_bug.cgi?id=267285

Canonical link: https://commits.webkit.org/274001@main